User Serializer 및 Authorization 구현

--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,9 @@ name = "pypi"
 [packages]
 django = "==3.2"
 djangorestframework = "*"
+django-crontab = "*"
+django-rest-auth = "*"
+django-allauth = "*"
 
 [dev-packages]
 flake8 = "*"
