--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,9 @@ name = "pypi"
 django = "==3.2"
 djangorestframework = "*"
 django-crontab = "*"
-django-rest-auth = "*"
 django-allauth = "*"
+dj-rest-auth = "*"
+django-dotenv = "*"
 
 [dev-packages]
 flake8 = "*"
